# liquidation-bot

./: Cargo.toml  config.toml
src/: config.rs  health.rs  liquidator.rs  main.rs  oracle.rs  rpc.rs  scanner.rs  tui.rs  types.rs
src/protocol/: drift.rs  kamino.rs  marginfi.rs  mod.rs  solend.rs
