[package]
name = "liq-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
clap         = { version = "4", features = ["derive"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-sdk   = "1.18"
solana-client = "1.18"
sha2 = "0.10"
solana-account-decoder = "1.18"
spl-associated-token-account = "2.3"
serde_json = "1"
ratatui   = "0.29"
once_cell = "1.19"
crossterm = "0.28"